--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="icon" href="./img/manito-italiana.png" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/style.css"/>
-  <title>Le Festin</title>
+  <head>
+    <link rel="icon" href="./img/manito-italiana.png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Le Festin</title>
+  </head>
+  <body>
+    <div id="root">
+      <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand" id="userName">Log In</span>
 
+        <div id="signInButton"></div>
+      </nav>
+    </div>
 
-</head>
-<body>
-  <div id="root"></div>
-  <footer>"Le Festin" es una aplicación creada por Cata Paz, Conni Zúñiga y Cata Morales</footer>
-  <script type="module" src="main.js"></script>
-</body>
+    <footer>
+      "Le Festin" es una aplicación creada por Catapasz, Conni Zúñiga y Cata
+      Morales
+    </footer>
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
