primera version del muro

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>Le Festin</title>
   </head>
-  <body>
-    <div id="root">
-      <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand" id="userName">Log In</span>
 
-        <div id="signInButton"></div>
-      </nav>
-    </div>
+  <body>
+    <div id="root"></div>
 
     <footer>
       "Le Festin" es una aplicación creada por Catapasz, Conni Zúñiga y Cata
