--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
     <div id="root"></div>
 
     <footer>
-      "Le Festin" es una aplicación creada por Catapasz, Conni Zúñiga y Cata
-      Morales
+    Le Festin Ⓒ Cata Salinas | Cata Morales | Conni Zúñiga
     </footer>
     <script type="module" src="main.js"></script>
   </body>
